--- a/index.html
+++ b/index.html
@@ -3,37 +3,54 @@
 <html lang="en">
    <head>
         <!-- stylesheets and metadata go here -->
-       <title>My CS130 Homepage</title>       
+       <title>Waverly's CS130 Homepage</title>       
        <link rel="stylesheet" href="style.css">
+       <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:wght@100&family=Libre+Baskerville&display=swap">
    </head>
    <body>
        <!-- HTML content tags go here. Change anything you want! -->
        <header>
-           <h1>My CS130 Homepage</h1>
+           <h1>Waverly's CS130 Homepage</h1>
        </header> 
        <main>
-            <section id="tutorials">
-                <h2>Tutorials</h2>
-                <a href="./tutorials/tutorial01/index.html">Tutorial 1</a>
-                <!-- 
-                    Links to your tutorial assignments go here.
-                    When you submit a new tutorial, add a link to it
-                    here (if applicable)
-                -->
-            </section>
-            <section id="homework">
-                <h2>Homework</h2>
-                <!-- 
-                    Links to your Homework assignments go here.
-                    When you submit a new HW assignment, add a link to it here (if applicable)
-                -->
-            </section>
-            <section id="inspiration">
-                <h2>Design Inspiration</h2>
-                <!-- 
-                    Links to 5-10 websites that inspire you
-                -->
-            </section>
+            <div class="container">
+                <section id="tutorials">
+                    <div class="column">
+                    <h2>Tutorials</h2>
+                    <hr>
+                    <p><a href="./tutorials/tutorial01/index.html">Tutorial 1</a></p>
+                    <p>Tutorial 2</p>
+                    <p>Tutorial 3</p>
+                    <!-- 
+                        Links to your tutorial assignments go here.
+                        When you submit a new tutorial, add a link to it
+                        here (if applicable)
+                    -->
+                    </div>
+                </section>
+                <section id="homework">
+                    <div class="column">
+                    <h2>Homework</h2>
+                    <hr>
+                    <p>Homework 1</p>
+                    <p>Homework 2</p>
+                    <p>Homework 3</p>
+                    <!-- 
+                        Links to your Homework assignments go here.
+                        When you submit a new HW assignment, add a link to it here (if applicable)
+                    -->
+                    </div>
+                </section>
+                <section id="inspiration">
+                    <div class="column">
+                    <h2>Design Inspiration</h2>
+                    <hr>
+                    <!-- 
+                        Links to 5-10 websites that inspire you
+                    -->
+                    </div>
+                </section>
+            </div>
         </main>
    </body>
 </html>
