--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <hr>
                     <p><a href="./tutorials/tutorial01/index.html">Tutorial 1</a>: Installation & Configuration</p>
                     <p>Tutorial 3: This page!</p>
-                    <p>Tutorial 4</p>
+                    <p><a href="./tutorials/tutorial04/index.html">Tutorial 4</a>: CSS Grid & Media Queries</p>
                     <!-- 
                         Links to your tutorial assignments go here.
                         When you submit a new tutorial, add a link to it
